--- a/NetworkProgramming_WpfIO.csproj
+++ b/NetworkProgramming_WpfIO.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Apis" Version="1.59.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.7.1" />
+  </ItemGroup>
+
 </Project>
